Added variable post length control for both students and instructors individually
